# RISCV_VerilogSim

./: .gitmodules  CMakeLists.txt
rtl/common/: alu_defines.svh  defines.svh  opcodes.svh
rtl/modules/: alu.sv  alu_decoder.sv  control_unit.sv  flopenr.sv  flopr.sv  hazard_unit.sv  imm.sv  main_decoder.sv  mem_2_store.sv  mux2.sv  mux3.sv  pipeline.sv  ram.sv  regfile.sv
scripts/: compare_trace_files.py  elf_to_memh.py  filter_sim_output.py  install-deps.sh
tests/: CMakeLists.txt
tests/cosim_tests/: CMakeLists.txt  addi_basic_instr.s  addi_slti.s  complex.s  complex_1.s  cosim_plugin.cpp  mem.s  pipeline_cosim_tb.cpp
tests/pipeline_tests/: CMakeLists.txt  addi_basic_expected.txt  addi_basic_instr.hex  addi_basic_instr.s  addi_slti_expected.txt  addi_slti_instr_mem.hex  beq.s  beq_expected.txt  complex.s  complex_expected.txt  jump.s  jump_expected.txt  mem.s  mem_expected.txt  pipeline_tb.cpp  store_16.s  store_16_expected.txt
tests/unit/: CMakeLists.txt  alu.cpp  control_unit.cpp  flopenr.cpp  flopr.cpp  imm.cpp  mux2.cpp  mux3.cpp  pipeline.cpp  ram.cpp  regfile.cpp
